--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,8 @@ edition = "2021"
 [build-dependencies]
 cc = { version = "1.0", features = ["parallel"] }
 os_info = "3.7.0"
+
+[features]
+default = ["dext"]
+dext = []
+kext = []
